Archive2/70/1091a7f60737fe/output
main.cpp: In lambda function:
main.cpp:11:24: error: cannot convert 'std::_Expr<std::_BinClos<std::__equal_to, std::_ValArray, std::_ValArray, int, int>, bool>' to 'bool' in return
        return a_val == b_val;
                        ^
main.cpp:12:4: warning: control reaches end of non-void function [-Wreturn-type]
    });
    ^
